clase 03/04/2025